# home-network-tracker

./: .gitignore  .gitmodules  README.md
.github/workflows/: test.yaml
go-loader/: Dockerfile  Makefile  go.mod  go.sum
go-loader/cmd/: main.go
go-loader/pkg/bpf/: bpf_runner.go
go-loader/pkg/network/: ip.go
go-loader/pkg/output/: output.go
go-loader/pkg/tracker/: connection_tracker.go  expiring_map.go
probe/: CMakeLists.txt  kprobe.bpf.c  kprobe.c  xdp.bpf.c  xdp.c
tools/: mmwatch
